# software_artchitecture_lab1

./: .gitignore  Cargo.toml  LICENSE  docker-compose.yml  nginx.conf
services/config-server/: Cargo.toml  Dockerfile
services/config-server/src/: handlers.rs  main.rs  router.rs
services/facade/: Cargo.toml  Dockerfile
services/facade/src/: handlers.rs  main.rs  router.rs
services/logging/: Cargo.toml  Dockerfile
services/logging/src/: handlers.rs  main.rs  router.rs
services/messages/: Cargo.toml  Dockerfile
services/messages/src/: consumer.rs  handlers.rs  main.rs  router.rs
shared/src/: models.rs
tests/: load_test.py
