[package]
name = "facade"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
shared = { path = "../../shared" }

[dependencies.uuid]
version = "1.20.0"
features = [
    "v4",
]